--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,8 @@ export(cx_extra_subset)
 export(cx_extra_tab_text)
 export(cx_setup)
 export(explore_sentence_filtered_df)
+export(filter_sentence_window)
 export(get_filtered_doc_indices_from_py)
 export(get_filtered_sentences_from_py)
-export(get_nested_indices)
+export(get_sentence_window_indices)
 export(tokenize_sentences_wrapper)
