--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,10 @@ Description: Python environment and R wrappers for corpus filtering
     by sentence proximity.
 License: GPL-3
 Depends: reticulate
-Imports: corporaexplorer, stringr
+Imports: 
+    corporaexplorer,
+    stringr,
+    magrittr
 SystemRequirements: Python (>= 3.6.0) with shared library;
     rusenttokenize;
     tqdm
